--- a/algebra/gcd.html
+++ b/algebra/gcd.html
@@ -139,22 +139,17 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="gcd"><a class="header" href="#gcd">GCD</a></h1>
-<p>Returns the greatest common divisor of a and b.</p>
-<pre><code class="language-rust noplayground">fn gcd(mut a: i64, mut b: i64) -&gt; i64 {
-    while b != 0 {
-        let t = b;
-        b = a % b;
-        a = t;
+                        <h1 id="gcd-lcm"><a class="header" href="#gcd-lcm">GCD, LCM</a></h1>
+<pre><code class="language-rust noplayground">fn gcd(x: u64, y: u64) -&gt; u64 {
+    if y == 0 {
+        x
+    } else {
+        gcd(y, x % y)
     }
-    a
 }
-</code></pre>
-<h1 id="lcm"><a class="header" href="#lcm">LCM</a></h1>
-<p>Returns the least common multiplier of a and b.</p>
-<p>Required snippets: <a href="#gcd">GCD</a></p>
-<pre><code class="language-rust noplayground">fn lcm(a: i64, b: i64) -&gt; i64 {
-    a / gcd(a, b) * b
+
+fn lcm(x: u64, y: u64) -&gt; u64 {
+    x / gcd(x, y) * y
 }
 </code></pre>
 
