--- a/numerical/isqrt.html
+++ b/numerical/isqrt.html
@@ -140,6 +140,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="integer-square-root"><a class="header" href="#integer-square-root">Integer Square Root</a></h1>
+<p>Reference: <a href="https://en.wikipedia.org/wiki/Integer_square_root#Algorithm_using_Newton&#x27;s_method">https://en.wikipedia.org/wiki/Integer_square_root#Algorithm_using_Newton's_method</a></p>
 <pre><code class="language-rust noplayground">fn isqrt(s: u64) -&gt; u64 {
     let mut x0 = s &gt;&gt; 1;
     if x0 != 0 {
