--- a/datastructure/segtree/intro.html
+++ b/datastructure/segtree/intro.html
@@ -95,8 +95,10 @@
                             <i class="fa fa-paint-brush"></i>
                         </button>
                         <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                            <li role="none"><button role="menuitem" class="theme" id="nord_light">Light (default)</button></li>
-                            <li role="none"><button role="menuitem" class="theme" id="nord_dark">Dark</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="nord_light">Nord Light</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="nord_dark">Nord Dark</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
+                            <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                             <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
                         </ul>
                         <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)" aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
