--- a/print.html
+++ b/print.html
@@ -1658,111 +1658,111 @@ assert_eq!(uf.is_reachable(2, 6), true);
 <div style="break-before: page; page-break-before: always;"></div><h1 id="strongly-connected-components"><a class="header" href="#strongly-connected-components">Strongly Connected Components</a></h1>
 <pre><code class="language-rust noplayground">#[derive(Debug)]
 struct Graph&lt;T&gt; {
-    n: usize,
-    first: Vec&lt;usize&gt;,
-    edge: Vec&lt;(usize, usize, T)&gt;, // (to, prev, data)
+    n: u32,
+    first: Vec&lt;u32&gt;,
+    edge: Vec&lt;(u32, u32, T)&gt;, // (to, prev, data)
 }
 
 impl&lt;T&gt; Graph&lt;T&gt; {
-    fn new(n: usize, e: usize) -&gt; Self {
+    fn new(n: u32, e: u32) -&gt; Self {
         Self {
             n,
-            first: vec![usize::MAX; n],
-            edge: Vec::with_capacity(e),
+            first: vec![u32::MAX; n as usize],
+            edge: Vec::with_capacity(e as usize),
         }
     }
 
-    fn add_edge(&amp;mut self, from: usize, to: usize, data: T) {
-        let prev = std::mem::replace(&amp;mut self.first[from], self.edge.len());
+    fn add_edge(&amp;mut self, from: u32, to: u32, data: T) {
+        let prev = std::mem::replace(&amp;mut self.first[from as usize], self.edge.len() as u32);
         self.edge.push((to, prev, data));
     }
 
-    fn neighbor(&amp;self, of: usize) -&gt; Neighbor&lt;T&gt; {
+    fn neighbor(&amp;self, of: u32) -&gt; Neighbor&lt;T&gt; {
         Neighbor {
             graph: self,
-            next_edge: self.first[of],
+            next_edge: self.first[of as usize],
         }
     }
 }
 
 struct Neighbor&lt;'g, T&gt; {
     graph: &amp;'g Graph&lt;T&gt;,
-    next_edge: usize,
+    next_edge: u32,
 }
 
 impl&lt;'g, T&gt; Iterator for Neighbor&lt;'g, T&gt; {
-    type Item = (usize, &amp;'g T);
+    type Item = (u32, &amp;'g T);
 
     fn next(&amp;mut self) -&gt; Option&lt;Self::Item&gt; {
-        let (to, next_edge, data) = self.graph.edge.get(self.next_edge)?;
+        let (to, next_edge, data) = self.graph.edge.get(self.next_edge as usize)?;
         self.next_edge = *next_edge;
         Some((*to, data))
     }
 }
 
 struct SccStack {
-    stack: Vec&lt;usize&gt;,
+    stack: Vec&lt;u32&gt;,
     check: Vec&lt;bool&gt;,
 }
 
 impl SccStack {
-    fn new(cap: usize) -&gt; Self {
+    fn new(cap: u32) -&gt; Self {
         Self {
-            stack: vec![0; cap],
-            check: vec![false; cap],
+            stack: vec![0; cap as usize],
+            check: vec![false; cap as usize],
         }
     }
 
-    fn len(&amp;self) -&gt; usize {
-        self.stack.len()
+    fn len(&amp;self) -&gt; u32 {
+        self.stack.len() as u32
     }
 
-    fn push(&amp;mut self, n: usize) {
+    fn push(&amp;mut self, n: u32) {
         self.stack.push(n);
-        self.check[n] = true;
+        self.check[n as usize] = true;
     }
 
-    fn get(&amp;self) -&gt; usize {
-        self.stack[self.len() - 1]
+    fn get(&amp;self) -&gt; u32 {
+        self.stack[self.len() as usize - 1]
     }
 
-    fn pop(&amp;mut self) -&gt; usize {
+    fn pop(&amp;mut self) -&gt; u32 {
         let tmp = self.stack.pop().unwrap();
-        self.check[tmp] = false;
+        self.check[tmp as usize] = false;
         tmp
     }
 
-    fn is_in(&amp;self, n: usize) -&gt; bool {
-        self.check[n]
+    fn is_in(&amp;self, n: u32) -&gt; bool {
+        self.check[n as usize]
     }
 }
 
 struct SCC&lt;'g, T&gt; {
     graph: &amp;'g Graph&lt;T&gt;,
-    scc_list: Vec&lt;Vec&lt;usize&gt;&gt;,
-    scc_ids: Vec&lt;usize&gt;,
+    scc_list: Vec&lt;Vec&lt;u32&gt;&gt;,
+    scc_ids: Vec&lt;u32&gt;,
 }
 
 impl&lt;'g, T: 'g&gt; SCC&lt;'g, T&gt; {
     fn new(graph: &amp;'g Graph&lt;T&gt;) -&gt; Self {
         let mut st = SccStack::new(graph.n);
-        let mut list: Vec&lt;Vec&lt;usize&gt;&gt; = Vec::new();
-        let mut gid: usize = 0;
-        let mut id = vec![graph.n; graph.n];
-        let mut low = vec![usize::MAX; graph.n];
+        let mut list: Vec&lt;Vec&lt;u32&gt;&gt; = Vec::new();
+        let mut gid: u32 = 0;
+        let mut id = vec![graph.n; graph.n as usize];
+        let mut low = vec![u32::MAX; graph.n as usize];
 
         for x in 0..graph.n {
-            if id[x] != graph.n {
+            if id[x as usize] != graph.n {
                 continue;
             }
             Self::dfs(graph, x, &amp;mut gid, &amp;mut id, &amp;mut low, &amp;mut st, &amp;mut list)
         }
         list.reverse();
 
-        let mut ids = vec![0; graph.n];
+        let mut ids = vec![0u32; graph.n as usize];
         for (i, l) in list.iter().enumerate() {
-            for v in l.iter() {
-                ids[*v] = i;
+            for &amp;v in l.iter() {
+                ids[v as usize] = i as u32;
             }
         }
 
@@ -1775,31 +1775,31 @@ impl&lt;'g, T: 'g&gt; SCC&lt;'g, T&gt; {
 
     fn dfs(
         graph: &amp;Graph&lt;T&gt;,
-        curr: usize,
-        gid: &amp;mut usize,
-        id: &amp;mut Vec&lt;usize&gt;,
-        low: &amp;mut Vec&lt;usize&gt;,
+        curr: u32,
+        gid: &amp;mut u32,
+        id: &amp;mut Vec&lt;u32&gt;,
+        low: &amp;mut Vec&lt;u32&gt;,
         st: &amp;mut SccStack,
-        list: &amp;mut Vec&lt;Vec&lt;usize&gt;&gt;,
+        list: &amp;mut Vec&lt;Vec&lt;u32&gt;&gt;,
     ) {
         st.push(curr);
-        id[curr] = *gid;
-        low[curr] = *gid;
+        id[curr as usize] = *gid;
+        low[curr as usize] = *gid;
         (*gid) += 1;
 
         for (next, _) in graph.neighbor(curr) {
-            if id[next] == graph.n {
+            if id[next as usize] == graph.n {
                 Self::dfs(graph, next, gid, id, low, st, list);
             }
         }
 
         for (next, _) in graph.neighbor(curr) {
             if st.is_in(next) {
-                low[curr] = low[curr].min(low[next]);
+                low[curr as usize] = low[curr as usize].min(low[next as usize]);
             }
         }
 
-        if id[curr] == low[curr] {
+        if id[curr as usize] == low[curr as usize] {
             let p = list.len();
             list.push(Vec::new());
             while st.len() != 0 &amp;&amp; st.get() != curr {
@@ -1814,19 +1814,19 @@ impl&lt;'g, T: 'g&gt; SCC&lt;'g, T&gt; {
 <div style="break-before: page; page-break-before: always;"></div><h1 id="2-sat"><a class="header" href="#2-sat">2-SAT</a></h1>
 <p>Required snippets: <a href="graphs/./scc.html#strongly-connected-components">SCC</a></p>
 <pre><code class="language-rust noplayground">struct TwoSat {
-    n: usize,
+    n: u32,
     graph: Graph&lt;()&gt;,
 }
 
 impl TwoSat {
-    fn new(n: usize, clause_num: usize) -&gt; Self {
+    fn new(n: u32, clause_num: u32) -&gt; Self {
         Self {
             n,
             graph: Graph::new(n &lt;&lt; 1, clause_num &lt;&lt; 1),
         }
     }
 
-    fn judge(f: bool, a: usize, b: usize) -&gt; usize {
+    fn judge(f: bool, a: u32, b: u32) -&gt; u32 {
         if f {
             a
         } else {
@@ -1834,7 +1834,7 @@ impl TwoSat {
         }
     }
 
-    fn add_clause(&amp;mut self, i: usize, f: bool, j: usize, g: bool) {
+    fn add_clause(&amp;mut self, i: u32, f: bool, j: u32, g: bool) {
         self.graph.add_edge(
             (i &lt;&lt; 1) + Self::judge(f, 0, 1),
             (j &lt;&lt; 1) + Self::judge(g, 1, 0),
@@ -1848,16 +1848,16 @@ impl TwoSat {
     }
 
     fn solve(self) -&gt; Option&lt;Vec&lt;bool&gt;&gt; {
-        let mut answer = vec![false; self.n];
+        let mut answer = vec![false; self.n as usize];
 
         let scc = SCC::new(&amp;self.graph);
         let ids = &amp;scc.scc_ids;
 
         for i in 0..self.n {
-            if ids[i &lt;&lt; 1] == ids[(i &lt;&lt; 1) + 1] {
+            if ids[(i as usize) &lt;&lt; 1] == ids[((i as usize) &lt;&lt; 1) + 1] {
                 return None;
             }
-            answer[i] = ids[i &lt;&lt; 1] &lt; ids[(i &lt;&lt; 1) + 1];
+            answer[i as usize] = ids[(i as usize) &lt;&lt; 1] &lt; ids[((i as usize) &lt;&lt; 1) + 1];
         }
         Some(answer)
     }
@@ -1899,9 +1899,7 @@ impl TwoSat {
 <h2 id="graham-scan"><a class="header" href="#graham-scan">Graham Scan</a></h2>
 <p>This snippet excludes every points on vertices from the convex hull, and only includes points of both ends.</p>
 <h3 id="snippet"><a class="header" href="#snippet">Snippet</a></h3>
-<pre><code class="language-rust noplayground">use std::cmp::Ordering;
-
-#[derive(Clone, Debug, Eq, PartialEq)]
+<pre><code class="language-rust noplayground">#[derive(Clone, Debug, Eq, PartialEq)]
 struct Point {
     x: i64,
     y: i64,
@@ -1940,7 +1938,8 @@ fn get_turn(v1: &amp;Point, v2: &amp;Point) -&gt; Turn {
     }
 }
 
-fn compare_ccw(a: &amp;Point, b: &amp;Point) -&gt; Ordering {
+fn compare_ccw(a: &amp;Point, b: &amp;Point) -&gt; std::cmp::Ordering {
+    use std::cmp::Ordering;
     if a == b {
         return Ordering::Equal;
     }
