deploy: 5b478cf2a5c2a72a5b6a7bfb13f3c3ed6642cc4c

--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>This book is a collection of snippets for competitive programming and problem solving with Rust. All you have to do for using snippets is simply copying snippets you need and pasting them into your code.</p>
 <h2 id="other-resources"><a class="header" href="#other-resources">Other Resources</a></h2>
+<h3 id="general"><a class="header" href="#general">General</a></h3>
+<ul>
+<li><a href="https://blog.shahjalalshohag.com/topic-list/">The Ultimate Topic List by Shahjalal Shohag</a></li>
+</ul>
 <h3 id="c"><a class="header" href="#c">C++</a></h3>
 <ul>
 <li><a href="https://github.com/Aeren1564/Algorithms">aeren1564's Library</a></li>
