--- a/intro.html
+++ b/intro.html
@@ -141,14 +141,22 @@
                     <main>
                         <h1 id="introduction"><a class="header" href="#introduction">Introduction</a></h1>
 <p>This book is a collection of snippets for competitive programming and problem solving with Rust. All you have to do for using snippets is simply copying snippets you need and pasting them into your code.</p>
+<h2 id="usage"><a class="header" href="#usage">Usage</a></h2>
+<p>Each snippet can be easily copied by clicking on the copy icon <i class="fa fa-copy"></i> at the top right corner of a code block.</p>
+<p>Clicking on the search icon <i class="fa fa-search"></i> in the menu bar, or pressing the <code>S</code> key on the keyboard will open an input box for entering search terms. Any keywords included in this book can be searched by typing it in the box.</p>
 <h2 id="other-resources"><a class="header" href="#other-resources">Other Resources</a></h2>
 <h3 id="general"><a class="header" href="#general">General</a></h3>
 <ul>
 <li><a href="https://blog.shahjalalshohag.com/topic-list/">The Ultimate Topic List by Shahjalal Shohag</a></li>
 </ul>
+<h3 id="rust"><a class="header" href="#rust">Rust</a></h3>
+<ul>
+<li><a href="https://github.com/EbTech/rust-algorithms">Contest Algorithms in Rust by EbTech</a></li>
+<li><a href="https://snippets.kiwiyou.dev/">kiwiyou's Snippets Collection</a></li>
+</ul>
 <h3 id="c"><a class="header" href="#c">C++</a></h3>
 <ul>
-<li><a href="https://github.com/Aeren1564/Algorithms">aeren1564's Library</a></li>
+<li><a href="https://github.com/Aeren1564/Algorithms">aeren1564 Bible</a></li>
 <li>AtCoder Library: <a href="https://atcoder.github.io/ac-library/production/document_en/">Doc</a>, <a href="https://github.com/atcoder/ac-library">GitHub</a></li>
 <li><a href="https://github.com/koosaga/olympiad/tree/master/Library">koosaga's Library</a></li>
 <li><a href="https://github.com/justiceHui/icpc-teamnote">justiceHui's Teamnote</a></li>
@@ -156,11 +164,6 @@
 <h3 id="python"><a class="header" href="#python">Python</a></h3>
 <ul>
 <li><a href="https://github.com/cheran-senthil/PyRival">PyRival</a></li>
-</ul>
-<h3 id="rust"><a class="header" href="#rust">Rust</a></h3>
-<ul>
-<li><a href="https://github.com/EbTech/rust-algorithms">Contest Algorithms in Rust by EbTech</a></li>
-<li><a href="https://snippets.kiwiyou.dev/">kiwiyou's Snippets Collection</a></li>
 </ul>
 
                     </main>
