--- a/algebra/crt.html
+++ b/algebra/crt.html
@@ -140,7 +140,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="chinese-remainder-theorem"><a class="header" href="#chinese-remainder-theorem">Chinese Remainder Theorem</a></h1>
-<p><code>crt(r, m)</code> returns \(x\) such that \(x \equiv r_i \pmod {m_i}\) for all \(i\).</p>
+<p><code>crt(r, m)</code> returns <code>Some(x)</code> such that \(x \equiv r_i \pmod {m_i}\) for all \(i\). If such \(x\) does not exist, then it returns <code>None</code>.</p>
 <h2 id="example"><a class="header" href="#example">Example</a></h2>
 <pre><pre class="playground"><code class="language-rust"><span class="boring">fn main() {
 </span>let r: Vec&lt;i64&gt; = vec![1, 2, 3];
